--- a/StudyBuddy/MyApplication/app/src/main/res/values/strings.xml
+++ b/StudyBuddy/MyApplication/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_sign_up">Register</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_user_profile">UserProfile</string>
 </resources>
