--- a/StudyBuddy/MyApplication/app/src/main/res/values/strings.xml
+++ b/StudyBuddy/MyApplication/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="title_activity_sign_up">Register</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_user_profile">UserProfile</string>
+    <string name="title_activity_notification">Notification</string>
 </resources>
