--- a/StudyBuddy/MyApplication/app/src/main/res/values/strings.xml
+++ b/StudyBuddy/MyApplication/app/src/main/res/values/strings.xml
@@ -25,4 +25,21 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_sign_up">Register</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
+    <string name="meeting_time">Meeting Time</string>
+    <string name="group_name">Group Name</string>
+    <string name="name">Name</string>
+    <string name="create_group">Create Group:</string>
+    <string name="course_name">Course Name</string>
+    <string name="date_time"><![CDATA[Date & TIme]]></string>
+    <string name="ex_bio_study_group">ex - Bio Study Group</string>
+    <string name="ex_intro_to_biology">ex- Intro to Biology</string>
+    <string name="ex_bio_111">ex- BIO 111</string>
+    <string name="course_id">Course ID</string>
+    <string name="create">Create</string>
+    <string name="create_group1">Create Group</string>
+    <string name="course_id_ex_biol_111">Course ID (ex- BIOL 111)</string>
+    <string name="course_name_ex_intro_to_biology">Course Name (ex- Intro to Biology)</string>
+    <string name="meeting_date_time"><![CDATA[Meeting Date & Time]]></string>
+    <string name="group_name_ex_bio_sudy_group">Group Name (ex: Bio Sudy Group)</string>
 </resources>
