--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="title_activity_groups">Groups</string>
     <string name="title_activity_profile">Profile</string>
     <string name="title_activity_navigation">Navigation</string>
+    <string name="title_activity_notifications">Notifications</string>
 </resources>
